--- a/formulario/src/styles.scss
+++ b/formulario/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/fluent-light/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+
+body {
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  background-color: var(--gray-900);
+}
