--- a/formulario/src/styles.scss
+++ b/formulario/src/styles.scss
@@ -3,12 +3,16 @@
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
+app-root {
+  width: 100%;
+}
+
 body {
   margin: 0px;
   padding: 0px;
   display: flex;
-  width: 100%;
   height: 100vh;
   align-items: center;
+  justify-content: center;
   background-color: var(--gray-900);
 }
