--- a/formulario/src/app/form/form.component.html
+++ b/formulario/src/app/form/form.component.html
@@ -1,4 +1,4 @@
-<div class="card flex justify-content-center">
+<section class="card flex justify-content-center">
   <p-card
     role="region"
     header="Formulário"
@@ -7,7 +7,7 @@
     <p-divider></p-divider>
 
     <form action="">
-      <div class="pessoal_infos_container">
+      <section class="pessoal_infos_container">
         <div class="pessoal_infos_container__itens nome_label">
           <label for="name">Nome</label>
           <input type="text" pInputText formControlName="name" />
@@ -20,54 +20,82 @@
           <label for="celular">Celular</label>
           <input type="text" pInputText formControlName="celular" />
         </div>
-      </div>
+      </section>
 
       <p-divider></p-divider>
 
-      <div class="pessoal_infos_container">
-        <div
-          class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco"
-        >
-          <label for="cep">CEP</label>
-          <input type="text" pInputText formControlName="cep" />
+      <section class="pessoal_infos_container__endereco">
+        <div class="pessoal_infos_container__endereco__itens">
+          <div
+            class="pessoal_infos_container__endereco__itens__style"
+            style="margin-right: 1.5%"
+          >
+            <div
+              class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco cep_label"
+            >
+              <label for="cep">CEP</label>
+              <input type="text" pInputText formControlName="cep" />
+            </div>
+            <div
+              class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco estado_label"
+            >
+              <label for="estado">Estado</label>
+              <input type="text" pInputText formControlName="estado" />
+            </div>
+          </div>
+
+          <div
+            class="pessoal_infos_container__endereco__itens__style"
+            style="margin-left: 1.5%"
+          >
+            <div
+              class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco cidade_label"
+            >
+              <label for="cidade">Cidade</label>
+              <input type="text" pInputText formControlName="cidade" />
+            </div>
+            <div
+              class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco bairro_label"
+            >
+              <label for="bairro">Bairro</label>
+              <input type="text" pInputText formControlName="bairro" />
+            </div>
+          </div>
         </div>
-        <div
-          class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco"
-        >
-          <label for="estado">Estado</label>
-          <input type="text" pInputText formControlName="estado" />
+
+        <div class="pessoal_infos_container__endereco__itens">
+          <div
+            class="pessoal_infos_container__endereco__itens__style"
+            style="margin-right: 1.5%"
+          >
+            <div
+              class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco rua_label"
+            >
+              <label for="rua">Rua</label>
+              <input type="text" pInputText formControlName="rua" />
+            </div>
+          </div>
+
+          <div
+            class="pessoal_infos_container__endereco__itens__style"
+            style="margin-left: 1.5%"
+          >
+            <div
+              class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco numero_label"
+            >
+              <label for="numero">Número</label>
+              <input type="text" pInputText formControlName="numero" />
+            </div>
+
+            <div
+              class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco"
+            >
+              <label for="complemento">Complemento</label>
+              <input type="text" pInputText formControlName="complemento" />
+            </div>
+          </div>
         </div>
-        <div
-          class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco"
-        >
-          <label for="cidade">Cidade</label>
-          <input type="text" pInputText formControlName="cidade" />
-        </div>
-        <div
-          class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco"
-        >
-          <label for="bairro">Bairro</label>
-          <input type="text" pInputText formControlName="bairro" />
-        </div>
-        <div
-          class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco"
-        >
-          <label for="rua">Rua</label>
-          <input type="text" pInputText formControlName="rua" />
-        </div>
-        <div
-          class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco"
-        >
-          <label for="numero">Número</label>
-          <input type="text" pInputText formControlName="numero" />
-        </div>
-        <div
-          class="pessoal_infos_container__itens pessoal_infos_container__itens__endereco"
-        >
-          <label for="complemento">Complemento</label>
-          <input type="text" pInputText formControlName="complemento" />
-        </div>
-      </div>
+      </section>
     </form>
   </p-card>
-</div>
+</section>
